--- a/_posts/2017-07-02-getss.md
+++ b/_posts/2017-07-02-getss.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: 如何正确地练习写作
-date: 2015-3-02
+title: 如何正确地练习写作2
+date: 2017-7-02
 categories: blog
 tags: [总结,知识管理]
 description: 通告一下，我已不再每天写千字文，准备采用以下的方法进行练习，由于文章篇幅较长，链接较多，建议到简书或博客进行阅读。
@@ -252,16 +252,6 @@ http://www.douban.com/doulist/37792472/
 
 ----
 
-![](http://cnfeat.qiniudn.com/signitrue-2015-03-05.png)
-
-
-（题图：write your page by awby）
-
-回复关键词「开智」获得
-
-###「开智微信群」入群指南
-
-http://t.cn/RwYcbCP
 
 
 
